tests/custom/STARIS_2022/operation-type-errors/allDiffExcept-type-error-01/stderr.expected
Error:
    Parser error in file: allDiffExcept-type-error.essence Error is:
ValidatorError allDiffExcept-type-error.essence:2:35:
  |
2 | such that b = alldifferent_except(1, {1, 3, 4, 5})
  |                                   ^
Type error:
	Expected:"Matrix or list"
	Got: int

allDiffExcept-type-error.essence:2:38:
  |
2 | such that b = alldifferent_except(1, {1, 3, 4, 5})
  |                                      ^^^^^^^^^^^^
Type error:
	Expected:"int enum or bool"
	Got: set of int

